--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
     "mongoose": "^5.13.12",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.4.17",
+    "nodemailer": "^6.7.2",
     "react-geocode": "^0.2.2",
     "shortid": "^2.2.16",
     "stripe": "^8.129.0",
